--- a/404.md
+++ b/404.md
@@ -2,11 +2,12 @@
 title: Page Not Found (404)
 layout: default
 published: true
+permalink: /404.html
 ---
 
 
 # Oscar was not found.
 
----
+------
 
 See if you can [find him]({{ site.url }}) 
